[package]
name = "livesplit_little_kitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { path = "../../source/repos/asr", features = ["unity", "derive"] } # asr = { git = "https://github.com/LiveSplit/asr", features = ["unity", "derive"] }
bytemuck = "1.15.0"
lol_alloc = "0.4.1"


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0