[package]
name = "livesplit_little_kitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { path = "../../../source/repos/asr", features = ["alloc", "unity", "derive"] } # asr = { git = "https://github.com/LiveSplit/asr", features = ["unity", "derive"] }
bytemuck = { version = "1.16.0", features = ["derive", "min_const_generics"] }
dlmalloc = { version = "0.2.6", features = ["global"] }

[lib]
crate-type = ["cdylib"]

[profile.dev]
lto = true

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0 